# PatternLanguageDiscordBot

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/source/: main.cpp
